--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
 		</p>
 		<p style="font-family:Comic Sans MS">One of my favorite interests is music. The current
 			love of my life is Kanye West, and he is now a Christian which is a major plus. He dropped a sick album a couple weeks ago called "Jesus is King." If you haven't listened to it yet: you SHOULD!
+			<p>Also, my favorite song by him is Ultralight Beam <del></del> <ins> Jesus is Lord </ins>!</p>
+		<p>A list of my Top Songs by Kanye:</p>
+<ol>
+  <li>Stronger</li>
+  <li>Famous</li>
+  <li>Real Friends</li>
+</ol>
+
+<p>Top Fav New Songs:</p>
+<ul>
+  <li>Follow God</li>
+  <li>Jesus is Lord</li>
+  <li>God Is</li>
+</ul>
 		</p>
 		<p style="font-family:Candara">If you want to get to know me a little better (since this was just a sneak peak) then check out the links below!!!</p>
 	</div>
